# Nexus-Terminal

./: LICENSE  README.md  __init__.py  __main__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
chat/: __init__.py  context.py  history.py  templates.py
llm/: __init__.py  backend.py  mock.py  ollama.py  openai_compat.py
safety/: __init__.py  rules.py  validator.py
tools/: __init__.py  base.py  code.py  data.py  file_ops.py  git.py  registry.py  system.py  terminal.py
utils/: __init__.py  display.py  parser.py  workspace.py
