[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.0.0"
description = "Nexus — Local Terminal AI Assistant | Developed under brutaltools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
nexus = "nexus.main:main"

[tool.setuptools.packages.find]
include = ["nexus*"]

[project.optional-dependencies]
full = ["orjson>=3.9.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
